preferences view updated; https access

--- a/src/views/preferences.ejs
+++ b/src/views/preferences.ejs
@@ -74,7 +74,7 @@
 
     </div>
 
-    <form method="POST" action="./preferences">
+    <form method="POST" action="preferences">
       <div class="form-row">
 
         <label for="downLimiteAlert" class="col-form-label">Down Limite Alert(%)</label>
@@ -116,7 +116,7 @@
 
       <hr>
       <div class="form-row">
-        <button type="submit" class="btn btn-primary col-md-4 m-2">
+        <button type="button" class="btn btn-primary col-md-4 m-2">
           <i class="material-icons">edit</i>
           Update
         </button>
